# FastSpeech2

./: .gitignore  IMPROVEMENT_PLAN.md  Makefile  OPTIMIZER_ANALYSIS.md  README.md  pyproject.toml  requirements.txt  test_normalization.py
audioml/: config.yaml  synthesize.py  temp_batch.pt  train.py
audioml/dataset/: feature_dataset.py
audioml/fastspeech/: model.py  speech_feature_predictor.py  transformer.py  utils.py
audioml/processing/: feature_compute.py  prepare_ljspeech_files.py  text_speech_alignment.py
audioml/text/: symbols.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: FastPitch.ipynb  FastSpeech2.ipynb  alignment_data_creation.ipynb  preprocessing.ipynb  train.ipynb
